Fix navigation z-index

--- a/src/sass/components/_navigation.scss
+++ b/src/sass/components/_navigation.scss
@@ -10,6 +10,7 @@
   left: 0;
   right: 0;
   padding: $spacing-5;
+  z-index: 50;
 }
 
 .navigation__logo {
